[package]
name = "fhe_contract"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sunscreen = "*"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "*"
clap = { version = "3.2.22", features = ["derive"] }
indicatif = "0.17.1"
arloader = "0.1.63"
reqwest = { version = "0.11", features = ["json"] }
serde_derive = "1.0.130"
tokio = { version = "1", features = ["rt-multi-thread", "fs", "macros"] }
url = "2.2.2"
ring = "0.16.20"


[dev-dependencies]
tokio-test = "*"
