[package]
name = "fhe_contract"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# sunscreen = "*"
sunscreen = { git = "https://github.com/Dev43/Sunscreen", branch = "feat/secret_deserialization" }
seal_fhe = { git = "https://github.com/Dev43/Sunscreen", branch = "feat/secret_deserialization" }
serde = { version = "1.0", features = ["derive", "rc"] }
serde_json = "1.0"
bincode = "*"
clap = { version = "3.2.22", features = ["derive"] }
indicatif = "0.17.1"
arloader = "0.1.63"
reqwest = { version = "0.11", features = ["json"] }
serde_derive = "1.0.130"
tokio = { version = "1", features = ["full"] }
url = "2.2.2"
ring = "0.16.20"
futures = "0.3"
walletconnect = { git = "https://github.com/Dev43/walletconnect-rs", branch = "feat/ethberlin", features = [
    "web3",
    "qr",
] }
owo-colors = "3"
prettytable-rs = "^0.9"


[dev-dependencies]
tokio-test = "*"
